--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^2.1.0
   responsive_framework: ^0.2.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
