--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   injectable: ^2.1.0
   responsive_framework: ^0.2.0
   otp_text_field: ^1.1.3
+  another_flushbar: ^1.12.29
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
