--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   responsive_framework: ^0.2.0
   otp_text_field: ^1.1.3
   another_flushbar: ^1.12.29
+  email_otp: ^1.0.4
+  cloud_firestore: ^4.4.4
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
